Article component completed but some design problem have still

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=DM+Serif+Display:ital@0;1&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.font-abril {
+    font-family: "Abril Fatface", serif;
+}
+.font-dm-serif {
+    font-family: "DM Serif Display", serif;
+}
